--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,8 @@ services:
     depends_on:
       - mosquitto
     environment:
-      SERVER: mosquitto:1883
+      PUBSERVER: mosquitto:1883
+      SUBSERVER: mosquitto:1883
       SUBTOPIC: bsm
       PUBTOPIC: decoded_bsm
     command: -log=debug
