--- a/kubernetes/mosquitto.yaml
+++ b/kubernetes/mosquitto.yaml
@@ -22,9 +22,7 @@ spec:
             - name: config
               mountPath: /mosquitto/config
               readOnly: true
-
       volumes:
         - name: config
-          hostPath:
-            path: /etc/mosquitto
-            type: Directory
+          configMap:
+            name: mosquitto-conf
