--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,42 @@
 version: "3.3"
 
 services:
-  sdmap-agent:
+  sdmap-agent-psm:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    networks: 
+      - mqtt
+    depends_on:
+      - mosquitto
+    environment:
+      FORMAT: 3
+      PUBSERVER: mosquitto:1883
+      SUBSERVER: mosquitto:1883
+      SUBTOPIC: psm
+      PUBTOPIC: decoded_psm
+    command: -log=debug
+  
+  jdecoder-test-pub-psm:
+    build: 
+      context: .
+      dockerfile: pub.Dockerfile
+    networks: 
+      - mqtt
+    depends_on:
+      - mosquitto
+    environment:
+      SERVER: mosquitto:1883
+      FILENAME: /app/psm.uper
+      PUBTOPIC: psm
+      SUBTOPIC: decoded_psm
+    command: -log=debug
+    volumes:
+      - type: bind
+        source: ./pkg/decoder/test/psm.uper
+        target: /app/psm.uper
+
+  sdmap-agent-bsm:
     build: 
       context: .
       dockerfile: Dockerfile
@@ -17,7 +52,7 @@ services:
       PUBTOPIC: decoded_bsm
     command: -log=debug
   
-  jdecoder-test-pub:
+  jdecoder-test-pub-bsm:
     build: 
       context: .
       dockerfile: pub.Dockerfile
