--- a/kubernetes/int-svc-mosq.yaml
+++ b/kubernetes/int-svc-mosq.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mosquitto-broker-internal-service
+  name: decoded-int-broker
 spec:
   type: ClusterIP
   ports:
   - port: 1883
     targetPort: 1883
   selector:
-    app: mosquitto-broker
+    app: decoded-mosquitto-broker
