--- a/kubernetes/mosquitto-confmap.yaml
+++ b/kubernetes/mosquitto-confmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mosquitto-conf
+  name: decoded-mosquitto-conf
 data:
   mosquitto.conf: |-
     pid_file /var/run/mosquitto.pid
