--- a/kubernetes/mosquitto.yaml
+++ b/kubernetes/mosquitto.yaml
@@ -1,13 +1,13 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: mosquitto-broker
+  name: decoded-mosquitto-broker
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: mosquitto-broker
+        app: decoded-mosquitto-broker
     spec:
       containers:
         - name: mosquitto-broker
@@ -25,4 +25,4 @@ spec:
       volumes:
         - name: config
           configMap:
-            name: mosquitto-conf
+            name: decoded-mosquitto-conf
