--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,42 +1,42 @@
 version: "3.3"
 
 services:
-  # sdmap-agent-psm:
-  #   build: 
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   networks: 
-  #     - mqtt
-  #   depends_on:
-  #     - mosquitto
-  #   environment:
-  #     FORMAT: 1
-  #     PUBFREQ: 10
-  #     PUBSERVER: mosquitto:1883
-  #     SUBSERVER: mosquitto:1883
-  #     SUBTOPIC: psm
-  #     PUBTOPIC: decoded_psm
-  #   command: -log=debug
+  sdmap-agent-psm:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    networks: 
+      - mqtt
+    depends_on:
+      - mosquitto
+    environment:
+      FORMAT: 1
+      PUBFREQ: 10
+      PUBSERVER: mosquitto:1883
+      SUBSERVER: mosquitto:1883
+      SUBTOPIC: psm
+      PUBTOPIC: decoded_psm
+    command: -log=debug
   
-  # jdecoder-test-pub-psm:
-  #   build: 
-  #     context: .
-  #     dockerfile: pub.Dockerfile
-  #   networks: 
-  #     - mqtt
-  #   depends_on:
-  #     - mosquitto
-  #   environment:
-  #     PUBFREQ: 10
-  #     PUBSERVER: mosquitto:1883
-  #     PUBFILE: /app/psm.uper
-  #     PUBTOPIC: psm
-  #     SUBTOPIC: decoded_psm
-  #   command: -log=debug
-  #   volumes:
-  #     - type: bind
-  #       source: ./pkg/decoder/samples/psm1.uper
-  #       target: /app/psm.uper
+  jdecoder-test-pub-psm:
+    build: 
+      context: .
+      dockerfile: pub.Dockerfile
+    networks: 
+      - mqtt
+    depends_on:
+      - mosquitto
+    environment:
+      PUBFREQ: 10
+      PUBSERVER: mosquitto:1883
+      PUBFILE: /app/psm.uper
+      PUBTOPIC: psm
+      SUBTOPIC: decoded_psm
+    command: -log=debug
+    volumes:
+      - type: bind
+        source: ./pkg/decoder/samples/psm1.uper
+        target: /app/psm.uper
 
   sdmap-agent-bsm:
     build: 
