--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,46 +38,7 @@ services:
   #       source: ./pkg/decoder/samples/psm1.uper
   #       target: /app/psm.uper
 
-  # sdmap-agent-bsm:
-  #   build: 
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   networks: 
-  #     - mqtt
-  #   depends_on:
-  #     - mosquitto
-  #   environment:
-  #     FORMAT: 0
-  #     PUBFREQ: 10
-  #     PUBSERVER: mosquitto:1883
-  #     SUBSERVER: mosquitto:1883
-  #     SUBTOPIC: bsm
-  #     PUBTOPIC: decoded_bsm
-  #     REVBEARING: 0
-  #     EXPIRY: 1
-  #   command: -log=debug
-  
-  # jdecoder-test-pub-bsm:
-  #   build: 
-  #     context: .
-  #     dockerfile: pub.Dockerfile
-  #   networks: 
-  #     - mqtt
-  #   depends_on:
-  #     - mosquitto
-  #   environment:
-  #     PUBFREQ: 10
-  #     PUBSERVER: mosquitto:1883
-  #     PUBFILE: /app/bsm.log
-  #     PUBTOPIC: bsm
-  #     SUBTOPIC: decoded_bsm
-  #   command: -log=debug
-  #   volumes:
-  #     - type: bind
-  #       source: ./pkg/decoder/samples/bsm-mcity.log
-  #       target: /app/bsm.log
-
-  sdmap-agent-spat:
+  sdmap-agent-bsm:
     build: 
       context: .
       dockerfile: Dockerfile
@@ -86,17 +47,17 @@ services:
     depends_on:
       - mosquitto
     environment:
-      FORMAT: 2
+      FORMAT: 0
       PUBFREQ: 10
       PUBSERVER: mosquitto:1883
       SUBSERVER: mosquitto:1883
-      SUBTOPIC: spat
-      PUBTOPIC: decoded_spat
+      SUBTOPIC: bsm
+      PUBTOPIC: decoded_bsm
       REVBEARING: 0
       EXPIRY: 1
     command: -log=debug
   
-  jdecoder-test-pub-spat:
+  jdecoder-test-pub-bsm:
     build: 
       context: .
       dockerfile: pub.Dockerfile
@@ -107,14 +68,53 @@ services:
     environment:
       PUBFREQ: 10
       PUBSERVER: mosquitto:1883
-      PUBFILE: /app/spat.uper
-      PUBTOPIC: spat
-      SUBTOPIC: decoded_spat
+      PUBFILE: /app/bsm.log
+      PUBTOPIC: bsm
+      SUBTOPIC: decoded_bsm
     command: -log=debug
     volumes:
       - type: bind
-        source: ./pkg/decoder/samples/spat.uper
-        target: /app/spat.uper
+        source: ./pkg/decoder/samples/bsmExt2.uper
+        target: /app/bsm.log
+
+  # sdmap-agent-spat:
+  #   build: 
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   networks: 
+  #     - mqtt
+  #   depends_on:
+  #     - mosquitto
+  #   environment:
+  #     FORMAT: 2
+  #     PUBFREQ: 10
+  #     PUBSERVER: mosquitto:1883
+  #     SUBSERVER: mosquitto:1883
+  #     SUBTOPIC: spat
+  #     PUBTOPIC: decoded_spat
+  #     REVBEARING: 0
+  #     EXPIRY: 1
+  #   command: -log=debug
+  
+  # jdecoder-test-pub-spat:
+  #   build: 
+  #     context: .
+  #     dockerfile: pub.Dockerfile
+  #   networks: 
+  #     - mqtt
+  #   depends_on:
+  #     - mosquitto
+  #   environment:
+  #     PUBFREQ: 10
+  #     PUBSERVER: mosquitto:1883
+  #     PUBFILE: /app/spat.uper
+  #     PUBTOPIC: spat
+  #     SUBTOPIC: decoded_spat
+  #   command: -log=debug
+  #   volumes:
+  #     - type: bind
+  #       source: ./pkg/decoder/samples/spat.uper
+  #       target: /app/spat.uper
 
   mosquitto:
     image: eclipse-mosquitto
