--- a/kubernetes/sdmap-agent-spat.yaml
+++ b/kubernetes/sdmap-agent-spat.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sdmap-agent-psm
+  name: sdmap-agent-spat
 spec:
   selector:
     matchLabels:
-      run: sdmap-agent-psm
+      run: sdmap-agent-spat
   replicas: 1
   template:
     metadata:
       labels:
-        run: sdmap-agent-psm
+        run: sdmap-agent-spat
     spec:
       containers:
-      - name: sdmap-agent-psm
+      - name: sdmap-agent-spat
         image: yhseanhsu/sdmap-agent:latest
         imagePullPolicy: Always
         resources:
@@ -25,18 +25,16 @@ spec:
             ephemeral-storage: "4Gi"
         env:
         - name: PUBFREQ
-          value: "1"
+          value: "2"
         - name: PUBSERVER
           value: decoded-int-broker.default.svc.cluster.local:1883
         - name: SUBSERVER
           value: mosquitto-internal-service.default.svc.cluster.local:1883
         - name: PUBTOPIC
-          value: DecodedPSM
+          value: DecodedSPaT
         - name: SUBTOPIC
-          value: VSCMobility/1.0.0/PSM/Video/#
+          value: VSCMobility/1.0.0/BSM/self/#
         - name: FORMAT
-          value: "1"
-        - name: EXPIRY
-          value: "4"
+          value: "2"
         args:
         - "-log=debug"
