--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,42 +1,42 @@
 version: "3.3"
 
 services:
-  # sdmap-agent-psm:
-  #   build: 
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   networks: 
-  #     - mqtt
-  #   depends_on:
-  #     - mosquitto
-  #   environment:
-  #     FORMAT: 1
-  #     PUBFREQ: 10
-  #     PUBSERVER: mosquitto:1883
-  #     SUBSERVER: mosquitto:1883
-  #     SUBTOPIC: psm
-  #     PUBTOPIC: decoded_psm
-  #   command: -log=debug
+  sdmap-agent-psm:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    networks: 
+      - mqtt
+    depends_on:
+      - mosquitto
+    environment:
+      FORMAT: 1
+      PUBFREQ: 1000
+      PUBSERVER: mosquitto:1883
+      SUBSERVER: mosquitto:1883
+      SUBTOPIC: psm
+      PUBTOPIC: decoded_psm
+    command: -log=debug
   
-  # jdecoder-test-pub-psm:
-  #   build: 
-  #     context: .
-  #     dockerfile: pub.Dockerfile
-  #   networks: 
-  #     - mqtt
-  #   depends_on:
-  #     - mosquitto
-  #   environment:
-  #     PUBFREQ: 10
-  #     PUBSERVER: mosquitto:1883
-  #     PUBFILE: /app/psm.uper
-  #     PUBTOPIC: psm
-  #     SUBTOPIC: decoded_psm
-  #   command: -log=debug
-  #   volumes:
-  #     - type: bind
-  #       source: ./pkg/decoder/samples/psm1.uper
-  #       target: /app/psm.uper
+  jdecoder-test-pub-psm:
+    build: 
+      context: .
+      dockerfile: pub.Dockerfile
+    networks: 
+      - mqtt
+    depends_on:
+      - mosquitto
+    environment:
+      PUBFREQ: 1000
+      PUBSERVER: mosquitto:1883
+      PUBFILE: /app/psm.uper
+      PUBTOPIC: psm
+      SUBTOPIC: decoded_psm
+    command: -log=debug
+    volumes:
+      - type: bind
+        source: ./pkg/decoder/samples/psm1.uper
+        target: /app/psm.uper
 
   sdmap-agent-bsm:
     build: 
@@ -67,7 +67,7 @@ services:
       - mosquitto
     environment:
       FORMAT: 0
-      PUBFREQ: 1
+      PUBFREQ: 1000
       PUBSERVER: mosquitto:1883
       PUBFILE: /app/bsm.log
       PUBTOPIC: bsm
@@ -75,47 +75,47 @@ services:
     command: -log=debug
     volumes:
       - type: bind
-        source: ./pkg/decoder/samples/logs/spat.log
+        source: ./pkg/decoder/samples/bsm1.uper
         target: /app/bsm.log
 
-  # sdmap-agent-spat:
-  #   build: 
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   networks: 
-  #     - mqtt
-  #   depends_on:
-  #     - mosquitto
-  #   environment:
-  #     FORMAT: 2
-  #     PUBFREQ: 10
-  #     PUBSERVER: mosquitto:1883
-  #     SUBSERVER: mosquitto:1883
-  #     SUBTOPIC: spat
-  #     PUBTOPIC: decoded_spat
-  #     REVBEARING: 0
-  #     EXPIRY: 1
-  #   command: -log=debug
+  sdmap-agent-spat:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    networks: 
+      - mqtt
+    depends_on:
+      - mosquitto
+    environment:
+      FORMAT: 2
+      PUBFREQ: 1000
+      PUBSERVER: mosquitto:1883
+      SUBSERVER: mosquitto:1883
+      SUBTOPIC: spat
+      PUBTOPIC: decoded_spat
+      REVBEARING: 0
+      EXPIRY: 1
+    command: -log=debug
   
-  # jdecoder-test-pub-spat:
-  #   build: 
-  #     context: .
-  #     dockerfile: pub.Dockerfile
-  #   networks: 
-  #     - mqtt
-  #   depends_on:
-  #     - mosquitto
-  #   environment:
-  #     PUBFREQ: 10
-  #     PUBSERVER: mosquitto:1883
-  #     PUBFILE: /app/spat.uper
-  #     PUBTOPIC: spat
-  #     SUBTOPIC: decoded_spat
-  #   command: -log=debug
-  #   volumes:
-  #     - type: bind
-  #       source: ./pkg/decoder/samples/spat.uper
-  #       target: /app/spat.uper
+  jdecoder-test-pub-spat:
+    build: 
+      context: .
+      dockerfile: pub.Dockerfile
+    networks: 
+      - mqtt
+    depends_on:
+      - mosquitto
+    environment:
+      PUBFREQ: 1000
+      PUBSERVER: mosquitto:1883
+      PUBFILE: /app/spat.uper
+      PUBTOPIC: spat
+      SUBTOPIC: decoded_spat
+    command: -log=debug
+    volumes:
+      - type: bind
+        source: ./pkg/decoder/samples/spat.uper
+        target: /app/spat.uper
 
   mosquitto:
     image: eclipse-mosquitto
